--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Triple_Triad_Protocol.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${reference.Triple_Triad_Protocol.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
