--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Triple Triad Client
+application.vendor=Student
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Triple_Triad_Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\Student.GRIT-PC01\\OneDrive\\C#\\Java\\mysql-connector-java-5.1.44-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${reference.Triple_Triad_Protocol.jar}
+    ${reference.Triple_Triad_Protocol.jar}:\
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
