--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,11 @@ dist.jar=${dist.dir}/Triple_Triad_Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\Student.GRIT-PC01\\OneDrive\\C#\\Java\\mysql-connector-java-5.1.44-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${reference.Triple_Triad_Protocol.jar}:\
-    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
+    ${reference.Triple_Triad_Protocol.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
