--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Triple Triad Client
+application.title=TTClient
 application.vendor=Student
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,7 +25,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Triple_Triad_Client.jar
+dist.jar=${dist.dir}/TTClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -63,8 +63,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Triple_Triad_Protocol=../Triple Triad Protocol
-reference.Triple_Triad_Protocol.jar=${project.Triple_Triad_Protocol}/dist/Triple_Triad_Protocol.jar
+project.Triple_Triad_Protocol=../TTProtocol
+reference.Triple_Triad_Protocol.jar=${project.Triple_Triad_Protocol}/dist/TTProtocol.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -78,3 +78,4 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
+compile.on.save.unsupported.jaxws=true
